Cleaned up code.
Removed hard coded replies. Replies will be extracted from a json file and their selection will be randomised. Removed unnecessary dependencies. Fixed typos and grammatical errors in README.md and example.ini.

--- a/example.ini
+++ b/example.ini
@@ -28,15 +28,17 @@ timeout=16
 [bot1]
 # username: Add the reddit username of the bot here
 username=""
-# password: During the preliminary setup this field will be used to login. Later you'll recieve a refresh_token which will replace password
+# password: During the preliminary setup this field will be used to login. Later you'll receive a refresh_token which will replace password
 password=""
 # client_id: your client_id can be acquired from reddit by visiting https://www.reddit.com/prefs/apps and setting up the script app
 client_id="" 
 # client_secret: client_secret is also acquired by visiting the above mentioned URL and setting up a reddit app
 client_secret=""
-# refresh_token: refresh_token will be acquired later once you've proceded through the Oauth2 verification process
+# refresh_token: refresh_token will be acquired later once you've proceeded through the Oauth2 verification process
 # refresh_token=""
+# same as  refresh token
+# access_token=""
 # redirect_uri: While completing the Oauth steps you'll be redirected to this URL. 
-redirect_uri="http://localhost:8080"
+redirect_url="http://localhost:8080"
 # user_agent: Each bot must have a unique user_agent string. Be descriptive and don't use words like 'bot' or 'scrape'
 user_agent="python:com.reddit.rPythonProjectSuggestionBot:v0.0.1"
